# British-Radio-Player

./: .gitignore  BUILD_FLAVORS_IMPLEMENTATION.md  FDROID_NEXT_STEPS.md  FDROID_SUBMISSION_CHECKLIST.md  FDROID_SUBMISSION_GUIDE.md  GITLAB_SUBMISSION_STEPS.md  LICENSE  README.md  gradle.properties  settings.gradle
.github/: monitoring.yaml
.github/workflows/: build-debug-apk.yml  build-podcast-index.yml  export-popular-podcasts.yml
.kilo/plans/: 1780154117774-cosmic-rocket.md  1780175520120-nimble-comet.md
api/: GOOGLE_CLOUD_SETUP.md  analytics.db  analytics_server.py  backfill_station_names.py  build_index.py  search_server.py  summarize.js
api/cloud_function/: main.py
api/cloud_run/: Dockerfile
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
deploy/: bbc-radio-health-check.service  bbc-radio-health-check.timer  bbc-radio-index-builder.service  bbc-radio-index-builder.timer  bbc-radio-nginx.conf  bbc-radio-popular-export.service  bbc-radio-popular-export.timer  bbc-radio-search.service  install.sh
docs/: README.md  index.html  manifest.webmanifest  monitoring.md  offline.html  podcast-index-meta.json  privacy.html  sw.js
esp32/: CMakeLists.txt  README.md  diagram.json  sdkconfig.defaults  subscriptions.txt.example
esp32/components/bsp/: CMakeLists.txt  bsp.h  bsp_codec.c  bsp_codec.h  bsp_display.c  bsp_display.h  bsp_power_manager.c  bsp_power_manager.h
esp32/components/lvgl_port/: lvgl_port.c
esp32/components/tf_card/: tf_card.c  tf_card.h
esp32/main/: CMakeLists.txt  config.h.example  main.c  subscriptions.txt
esp32/main/audio/: audio_pipeline.c  playback_state.c  playback_state.h
esp32/main/data/: podcast_index.c  podcast_index.h  stations.c  stations.h  subscriptions.c  subscriptions.h
esp32/main/ui/: screen_home.c  screen_now_playing.c  screen_pod_detail.c  screen_podcasts.c  screen_podcasts.h  screen_settings.c  screen_stations.c  ui_manager.c  ui_manager.h
fdroid-metadata/: README.md  com.hyliankid14.bbcradioplayer.yml
ios/: README.md  project.yml
ios/BBCRadioPlayer/: Info.plist
ios/BBCRadioPlayer.xcodeproj/: project.pbxproj
ios/BBCRadioPlayer/App/: AppContainer.swift  BBCRadioPlayerApp.swift  RootTabView.swift
ios/BBCRadioPlayer/Assets/: AppIconView.swift
keystore/: README.md  debug.keystore
metadata/: README.md  com.hyliankid14.bbcradioplayer.yml
scripts/: build-release-aab.sh  export_popular_podcasts.py  generate_ios_icon.py  github-release.sh  health_check.py  install-wear-debug.sh  local-deploy.sh  setup-google-cloud-index.sh  setup-ios-build.sh  setup-local-build.sh  setup-release-signing.sh
scripts/cloud/: setup-google-cloud-index.sh
scripts/ios/: setup-ios-build.sh
wear/: build.gradle  proguard-rules.pro
(+194 files in other folders)
